--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 logging.level.root=INFO
 spring.datasource.driverClassName=com.microsoft.sqlserver.jdbc.SQLServerDriver
-spring.datasource.url=jdbc:sqlserver://dev-sqlserver.accumed.sy:1433;databaseName=DashboardManager
-#spring.datasource.url=jdbc:sqlserver://mssql.santechture.com:1433;databaseName=DashboardManager
+#spring.datasource.url=jdbc:sqlserver://dev-sqlserver.accumed.sy:1433;databaseName=DashboardManager
+spring.datasource.url=jdbc:sqlserver://mssql.santechture.com:1433;databaseName=DashboardManager
 spring.datasource.username=sa
 spring.datasource.password=P@ssw0rd123
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.SQLServerDialect
